--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "env-cmd -f ./.env nodemon src/app.js",
-    "dev": "cross-env NODE_ENV=development PORT=5000 MONGODB_URL=mongodb://localhost/authServer JWT_KEY=secret JWT_EXP=5000 nodemon src/app.js",
+    "dev": "nodemon src/app.js",
     "debug": "nodemon --inspect=0.0.0.0:9229 src/app.js",
     "test": "cross-env NODE_ENV=test PORT=5000 MONGODB_URL=mongodb://localhost/testAuthServer JWT_KEY=secretkey JWT_EXP=2000 jest"
   },
