--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Authentication server",
   "main": "index.js",
   "scripts": {
-    "start": "env-cmd -f ./.env nodemon src/app.js",
+    "start": "node src/app.js",
     "dev": "nodemon src/app.js",
     "debug": "nodemon --inspect=0.0.0.0:9229 src/app.js",
-    "test": "cross-env NODE_ENV=test PORT=5000 MONGODB_URL=mongodb://localhost/testAuthServer JWT_KEY=secretkey JWT_EXP=2000 jest"
+    "test": "jest"
   },
   "keywords": [],
   "author": "3omer",
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.16",
+    "nodemailer": "^6.4.17",
     "validator": "^13.1.17"
   },
   "devDependencies": {
