--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "node src/app.js",
     "dev": "nodemon src/app.js",
     "debug": "nodemon --inspect=0.0.0.0:9229 src/app.js",
-    "test": "jest"
+    "test": "jest",
+    "test:routes": "jest src/tests/routes.test.js"
   },
   "keywords": [],
   "author": "3omer",
