--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Authentication server",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js",
-    "dev": "nodemon src/app.js",
-    "debug": "nodemon --inspect=0.0.0.0:9229 src/app.js",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js",
+    "debug": "nodemon --inspect=0.0.0.0:9229 src/index.js",
     "test": "jest",
     "test:routes": "jest src/tests/routes.test.js"
   },
