--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.16",
+    "morgan": "^1.10.0",
     "nodemailer": "^6.4.17",
     "validator": "^13.1.17"
   },
