--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "mongoose": "^5.10.16",
     "morgan": "^1.10.0",
     "nodemailer": "^6.4.17",
+    "uuid": "^8.3.2",
     "validator": "^13.1.17"
   },
   "devDependencies": {
