--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,23 +1,18 @@
 {
-    "env": {
-        "commonjs": true,
-        "es2021": true,
-        "node": true
-    },
-    "extends": [
-        "airbnb-base",
-        "prettier"
-    ],
-    "plugins": [
-        "prettier"
-    ],
-    "parserOptions": {
-        "ecmaVersion": 12
-    },
-    "rules": {
-        "semi": ["error", "never"],
-        "func-names": "warn",
-        "no-console": "off",
-        "prettier/prettier": ["error", {"semi": false, "singleQuote": true}]
-    }
+  "env": {
+    "commonjs": true,
+    "es2021": true,
+    "node": true
+  },
+  "extends": ["airbnb-base", "prettier"],
+  "plugins": ["prettier", "jest"],
+  "parserOptions": {
+    "ecmaVersion": 12
+  },
+  "rules": {
+    "semi": ["error", "never"],
+    "func-names": "warn",
+    "no-console": "off",
+    "prettier/prettier": ["error", { "semi": false, "singleQuote": true }]
+  }
 }
