--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,30 +1,30 @@
 services:
-    web:
-        build: .
-        ports: 
-            - 5000:5000
-        env_file: .env
-        environment: 
-            - MONGODB_URL=mongodb://mongo:27017/authServer
-        volumes: 
-            - ./:/usr/AuthServer
-        networks:
-            - mongo
-        command: npm run start
-    
-    mongo:
-        image: mongo:4.4.3
-        ports: 
-            - 27017:27017
-        volumes: 
-            - mongodb:/data/db
-            - mongodb_config:/data/dbconfig
-        networks:
-            - mongo
+  web:
+    build: .
+    ports:
+      - 5000:5000
+    env_file: .env
+    environment:
+      - MONGODB_URL=mongodb://mongo:27017/authServer
+      - REDIS_URI=redis://redis:6379
+    volumes:
+      - ./:/usr/AuthServer
+    command: npm run start
 
-networks:
-    mongo:
+  mongo:
+    image: mongo:4.4.3
+    ports:
+      - 27017:27017
+    volumes:
+      - mongodb:/data/db
+      - mongodb_config:/data/dbconfig
 
-volumes: 
-    mongodb:
-    mongodb_config:
+  redis:
+    image: redis:latest
+    hostname: redis
+    ports:
+      - '6379:6379'
+
+volumes:
+  mongodb:
+  mongodb_config:
