--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "eslint-plugin-jest": "^24.3.6",
     "express": "^4.17.1",
     "express-validator": "^6.10.0",
+    "ioredis": "^4.27.6",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.16",
     "morgan": "^1.10.0",
